--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-    <link rel="stylesheet" href="Time-tracking.css">
+    <link rel="stylesheet" href="Style.css">
     <title>Document</title>
 </head>
 <body>
@@ -126,5 +126,5 @@
 </div>
 </div>
 </body>
-<script  src="Time-tracking.js"></script>
+<script  src="script.js"></script>
 </html>
