--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="user">
         
        <div class="user-bio">
-                <img src="..//time-tracking-dashboard-main/images/image-jeremy.png" alt="Jeremy IMage" class="user-image">
+                <img src="image-jeremy.png" alt="Jeremy IMage" class="user-image">
                <p class="name">
                 <span class="about">Report for</span> <br>
             Jeremy Robson</p>
