--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 </div>   
 <div class="box1">
-<img src="images/icon-exercise.svg" alt=""  class="exercise-icon icon">
+<img src="icon-exercise.svg" alt=""  class="exercise-icon icon">
 <div class="box">
 <div class="options">
 <p class="work">Exercise</p><svg width="21" height="5" xmlns="http://www.w3.org/2000/svg" class="option-icon"><path d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z" fill="#BBC0FF" fill-rule="evenodd"/></svg>
@@ -94,7 +94,7 @@
 </div>
 </div>     
 <div class="box1">
-<img src="images/icon-social.svg" alt="Social SVG" class="social-icon icon">
+<img src="icon-social.svg" alt="Social SVG" class="social-icon icon">
 <div class="box">
 <div class="options">
 <p class="work">Social</p><svg width="21" height="5" xmlns="http://www.w3.org/2000/svg" class="option-icon"><path d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z" fill="#BBC0FF" fill-rule="evenodd"/></svg>
@@ -109,7 +109,7 @@
 </div>
 </div>  
 <div class="box1">
-<img src="images/icon-self-care.svg" alt="Self care SVG" class="self-care-icon icon">
+<img src="icon-self-care.svg" alt="Self care SVG" class="self-care-icon icon">
 <div class="box">
 <div class="options">
 <p class="self" >Self Care</p><svg width="21" height="5" xmlns="http://www.w3.org/2000/svg" class="self-icon"><path d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z" fill="#BBC0FF" fill-rule="evenodd"/></svg>
